Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Turk Dars</title>
+<title>Turk Tili Darslari</title>
 </head>
 
-<body style="text-align:center; font-family:sans-serif;">
+<body style="text-align:center; font-family:sans-ser>
+<h1>🇹🇷 Turk Tili Mini App</h1>
 
-<h1>Turk Tilini O‘rganish</h1>
+<br>
 
-<p>Video darslar va testlar</p>
-
-<a href="https://youtube.com">
-<button style="padding:15px; font-size:18px;">
-Video Darslar
+<button onclick="alert('1-Dars ochildi')"
+style="padding:15px; font-size:18px;">
+📘 Darslar
 </button>
-</a>
 
 <br><br>
 
-<button style="padding:15px; font-size:18px;">
-Testlar
+<button onclick="alert('Test boshlandi')"
+style="padding:15px; font-size:18px;">
+📝 Testlar
+</button>
+
+<br><br>
+
+<button onclick="alert('Video darslar')"
+style="padding:15px; font-size:18px;">
+🎥 Videolar
 </button>
 
 </body>
 </html>
+
+
+
+
