Update title and body content in index.html

--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Turk Tili Darslari</title>
+<meta charset="UTF-8">
+<title>Turk tili darslari</title>
 </head>
 
-<body style="text-align:center; font-family:sans-ser>
-<h1>🇹🇷 Turk Tili Mini App</h1>
+<body style="text-align:center; font-family:sans-serif;">
 
-<br>
+<h1>Turk tili darslari</h1>
 
-<button onclick="alert('1-Dars ochildi')"
-style="padding:15px; font-size:18px;">
-📘 Darslar
+<p>Darslar ro'yxati:</p>
+
+<button onclick="alert('1-Dars ochildi')">
+1-Dars
 </button>
 
 <br><br>
 
-<button onclick="alert('Test boshlandi')"
-style="padding:15px; font-size:18px;">
-📝 Testlar
-</button>
-
-<br><br>
-
-<button onclick="alert('Video darslar')"
-style="padding:15px; font-size:18px;">
-🎥 Videolar
+<button onclick="alert('2-Dars ochildi')">
+2-Dars
 </button>
 
 </body>
 </html>
-
-
-
-
