--- a/web/index.html
+++ b/web/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Turk Tili Mini App</title>
+<title>Turk Tili</title>
 </head>
+<body>
 
-<body style="background:#111;color:white;font-family:sans-serif;text-align:center;">
+<h1>Turk Tilini O‘rganish</h1>
 
-<h1>🇹🇷 Turk Tili O‘rganish</h1>
-
-<button onclick="openDars()" style="padding:15px;margin:10px;width:80%;">📘 Darslar</button>
-<button onclick="openTest()" style="padding:15px;margin:10px;width:80%;">📝 Test</button>
-<button onclick="openVideo()" style="padding:15px;margin:10px;width:80%;">🎥 Video</button>
-
-<script>
-function openDars(){
- alert("Darslar sahifasi keyin qo‘shiladi");
-}
-function openTest(){
- alert("Test sahifasi keyin qo‘shiladi");
-}
-function openVideo(){
- alert("Video sahifasi keyin qo‘shiladi");
-}
-</script>
+<button>Video darslar</button>
+<br><br>
+<button>Mavzulashtirilgan testlar</button>
+<br><br>
+<button>Atamalar</button>
+<br><br>
+<button>Ma'lumot</button>
 
 </body>
 </html>
