--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Turk tili darslari</title>
+<title>Turk Tili</title>
 </head>
+<body>
 
-<body style="text-align:center; font-family:sans-serif;">
+<h1>Turk Tilini O‘rganish</h1>
 
-<h1>Turk tili darslari</h1>
-
-<p>Darslar ro'yxati:</p>
-
-<button onclick="alert('1-Dars ochildi')">
-1-Dars
-</button>
-
+<button>Darslar</button>
 <br><br>
-
-<button onclick="alert('2-Dars ochildi')">
-2-Dars
-</button>
+<button>Video darslar</button>
+<br><br>
+<button>Testlar</button>
+<br><br>
+<button>Ma'lumot</button>
 
 </body>
 </html>
