--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Turk Tili</title>
+<title>Turk Tilini organamiz</title>
 </head>
 <body>
 
-<h1>Turk Tilini O‘rganish</h1>
+<h1>Turk Tilini O‘rganamiz!</h1>
 
 <button>Darslar</button>
 <br><br>
-<button>Video darslar</button>
-<br><br>
 <button>Testlar</button>
+<br><br>
+<button>Atamalar</button>
 <br><br>
 <button>Ma'lumot</button>
 
