--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Turk Tili</title>
+
+<style>
+body {
+  background: #0f172a;
+  color: white;
+  font-family: Arial;
+  text-align: center;
+  padding-top: 40px;
+}
+
+h1 {
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+
+.btn {
+  display: block;
+  width: 80%;
+  margin: 12px auto;
+  padding: 15px;
+  border-radius: 14px;
+  border: none;
+  font-size: 18px;
+  background: linear-gradient(45deg,#22c55e,#16a34a);
+  color: white;
+}
+
+.btn2 {
+  background: linear-gradient(45deg,#3b82f6,#2563eb);
+}
+
+.btn3 {
+  background: linear-gradient(45deg,#f59e0b,#d97706);
+}
+
+.btn4 {
+  background: linear-gradient(45deg,#ef4444,#dc2626);
+}
+</style>
 </head>
+
 <body>
 
-<h1>Turk Tilini O‘rganish</h1>
+<h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
 
-<button>Video darslar</button>
-<br><br>
-<button>Mavzulashtirilgan testlar</button>
-<br><br>
-<button>Atamalar</button>
-<br><br>
-<button>Ma'lumot</button>
+<button class="btn">📚 Darslar</button>
+<button class="btn btn2">📝 Testlar</button>
+<button class="btn btn3">🧠 Atamalar</button>
+<button class="btn btn4">ℹ️ Ma'lumot</button>
 
 </body>
 </html>
