--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 <style>
 body {
   background: #0f172a;
-  color: white;
+  color: red;
   font-family: Arial;
   text-align: center;
   padding-top: 40px;
