--- a/index.html
+++ b/index.html
@@ -1,19 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="uz">
 <head>
-<title>Turk Tilini organamiz</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Turk Tili</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(180deg,#0f172a,#020617);
+    color: white;
+    text-align: center;
+}
+
+.header {
+    padding: 30px 20px 10px;
+}
+
+h1 {
+    font-size: 26px;
+    margin-bottom: 5px;
+}
+
+.sub {
+    color: #94a3b8;
+    font-size: 14px;
+}
+
+.container {
+    margin-top: 30px;
+    padding: 0 20px;
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    max-width: 320px;
+    margin: 14px auto;
+    padding: 16px;
+    border-radius: 18px;
+    border: none;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.btn:active {
+    transform: scale(0.97);
+}
+
+.dars { background: linear-gradient(45deg,#22c55e,#16a34a); }
+.test { background: linear-gradient(45deg,#3b82f6,#2563eb); }
+.lugat { background: linear-gradient(45deg,#f59e0b,#d97706); }
+.info { background: linear-gradient(45deg,#ef4444,#dc2626); }
+
+.footer {
+    margin-top: 40px;
+    font-size: 12px;
+    color: #64748b;
+}
+</style>
 </head>
+
 <body>
 
-<h1>Turk Tilini O‘rganamiz!</h1>
+<div class="header">
+    <h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
+    <div class="sub">Mini Darslik & Test Platforma</div>
+</div>
 
-<button>Darslar</button>
-<br><br>
-<button>Testlar</button>
-<br><br>
-<button>Atamalar</button>
-<br><br>
-<button>Ma'lumot</button>
+<div class="container">
+    <button class="btn dars">📘 Darslar</button>
+    <button class="btn test">📝 Testlar</button>
+    <button class="btn lugat">📖 Atamalar</button>
+    <button class="btn info">ℹ️ Ma'lumot</button>
+</div>
+
+<div class="footer">
+    Engfoydali Bot © 2025
+</div>
 
 </body>
 </html>
