--- a/web/index.html
+++ b/web/index.html
@@ -1,58 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="uz">
 <head>
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Turk Tili</title>
+<title>Turk Tili Mini App</title>
 
 <style>
-body {
-  background: #0f172a;
-  color: red;
-  font-family: Arial;
-  text-align: center;
-  padding-top: 40px;
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family: Arial, sans-serif;
 }
 
-h1 {
-  font-size: 26px;
-  margin-bottom: 30px;
+body{
+  height:100vh;
+  background: linear-gradient(180deg,#0f172a,#020617);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:white;
 }
 
-.btn {
-  display: block;
-  width: 80%;
-  margin: 12px auto;
-  padding: 15px;
-  border-radius: 14px;
-  border: none;
-  font-size: 18px;
-  background: linear-gradient(45deg,#22c55e,#16a34a);
-  color: white;
+.container{
+  width:95%;
+  max-width:420px;
+  text-align:center;
+  background: rgba(255,255,255,0.05);
+  backdrop-filter: blur(12px);
+  border-radius:25px;
+  padding:25px;
+  box-shadow:0 0 30px rgba(0,0,0,0.6);
 }
 
-.btn2 {
-  background: linear-gradient(45deg,#3b82f6,#2563eb);
+h1{
+  font-size:24px;
+  margin-bottom:8px;
 }
 
-.btn3 {
-  background: linear-gradient(45deg,#f59e0b,#d97706);
+.subtitle{
+  font-size:14px;
+  opacity:0.8;
+  margin-bottom:25px;
 }
 
-.btn4 {
-  background: linear-gradient(45deg,#ef4444,#dc2626);
+.btn{
+  display:block;
+  width:100%;
+  padding:16px;
+  margin:12px 0;
+  border:none;
+  border-radius:18px;
+  font-size:18px;
+  font-weight:bold;
+  color:white;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.btn:hover{
+  transform:scale(1.04);
+}
+
+.green{background:linear-gradient(45deg,#22c55e,#16a34a);}
+.blue{background:linear-gradient(45deg,#3b82f6,#2563eb);}
+.orange{background:linear-gradient(45deg,#f59e0b,#d97706);}
+.red{background:linear-gradient(45deg,#ef4444,#dc2626);}
+
+.footer{
+  margin-top:20px;
+  font-size:12px;
+  opacity:0.6;
 }
 </style>
 </head>
 
 <body>
 
-<h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
+<div class="container">
+  <h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
+  <div class="subtitle">Mini Darslik & Test Platforma</div>
 
-<button class="btn">📚 Darslar</button>
-<button class="btn btn2">📝 Testlar</button>
-<button class="btn btn3">🧠 Atamalar</button>
-<button class="btn btn4">ℹ️ Ma'lumot</button>
+  <button class="btn green">📘 Darslar</button>
+  <button class="btn blue">📝 Testlar</button>
+  <button class="btn orange">📖 Atamalar</button>
+  <button class="btn red">ℹ️ Ma'lumot</button>
+
+  <div class="footer">Engfoydali Bot © 2025</div>
+</div>
 
 </body>
 </html>
