--- a/index.html
+++ b/index.html
@@ -81,13 +81,18 @@ h1{
   <h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
   <div class="subtitle">Mini Darslik & Test Platforma</div>
 
-  <button class="btn green">📘 Darslar</button>
-  <button class="btn blue">📝 Testlar</button>
-  <button class="btn orange">📖 Atamalar</button>
-  <button class="btn red">ℹ️ Ma'lumot</button>
-
+<button class="btn green" onclick="openPage('dars.html')">📘 Darslar</button>
+<button class="btn blue" onclick="openPage('test.html')">📝 Testlar</button>
+<button class="btn orange" onclick="openPage('lugat.html')">📖 Atamalar</button>
+<button class="btn red" onclick="openPage('info.html')">ℹ️ Ma'lumot</button>
   <div class="footer">Engfoydali Bot © 2025</div>
 </div>
+
+<script>
+function openPage(page){
+  window.location.href = page;
+}
+</script>
 
 </body>
 </html>
