--- a/web/index.html
+++ b/web/index.html
@@ -81,10 +81,9 @@ h1{
   <h1>🇹🇷 Turk Tilini O‘rganamiz</h1>
   <div class="subtitle">Mini Darslik & Test Platforma</div>
 
-  <button class="btn green">📘 Darslar</button>
-  <button class="btn blue">📝 Testlar</button>
-  <button class="btn orange">📖 Atamalar</button>
-  <button class="btn red">ℹ️ Ma'lumot</button>
+<a href="dars.html" class="btn green">📘 Darslar</a>
+<a href="test.html" class="btn blue">📝 Testlar</a>
+<a href="atama.html" class="btn orange">📖 Atamalar</a>
 
   <div class="footer">Engfoydali Bot © 2025</div>
 </div>
