1-mavzu video qo'shildi

--- a/web/dars.html
+++ b/web/dars.html
@@ -31,13 +31,13 @@ body{
 <a class="btn" href="#mavzu1">1-Mavzu</a>
 
 <div class="card" id="mavzu1">
-<h3>1-Mavzu: A1 Nerelisın/Siz qayerdansiz</h3>
+  <h3>1-Mavzu: A1 Nerelisin/Siz qayerdansiz</h3>
 
-<iframe width="100%" height="220"
-src="https://www.youtube.com/embed/aE6WGmdHI6yoI3N5"
-frameborder="0"
-allowfullscreen>
-</iframe>
+  <iframe width="100%" height="220"
+  src="https://www.youtube.com/embed/Dpj6Y93_vC8"
+  frameborder="0"
+  allowfullscreen>
+  </iframe>
 
 </div>
 
