mavzu1 video fix

--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -36,9 +36,14 @@ body{
 <div class="card">
 <h3>Video dars</h3>
 
-<iframe width="100%" height="220"
-src="https://www.youtube.com/embed/Dpj6Y93_vC8"
-frameborder="0" allowfullscreen>
+<iframe 
+  width="100%" 
+  height="220"
+  src="https://www.youtube.com/embed/Dpj6Y93_vC8"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen>
 </iframe>
 
 </div>
