--- a/web/dars.html
+++ b/web/dars.html
@@ -28,19 +28,7 @@ body{
 
 <h1>Darslar</h1>
 
-<a class="btn" href="#mavzu1">1-Mavzu</a>
-
-<div class="card" id="mavzu1">
-  <h3>1-Mavzu: A1 Nerelisin/Siz qayerdansiz</h3>
-
-  <iframe width="100%" height="220"
-  src="https://www.youtube.com/embed/Dpj6Y93_vC8"
-  frameborder="0"
-  allowfullscreen>
-  </iframe>
-
-</div>
-
+<a class="btn" href="mavzu1.html">1-Mavzu</a>
 <a class="btn" href="#">2-Mavzu</a>
 <a class="btn" href="#">3-Mavzu</a>
 <a class="btn" href="#">4-Mavzu</a>
