--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -6,57 +6,72 @@
 
 <style>
 body{
- background:#0f172a;
- color:white;
- font-family:Arial;
- padding:20px;
-}
-.card{
- background:#1e293b;
- padding:15px;
- border-radius:12px;
- margin:15px 0;
-}
-.btn{
- display:block;
- background:green;
- padding:12px;
- border-radius:10px;
- text-decoration:none;
- color:white;
- margin-top:10px;
-}
-.test-box{
-  background:#0f172a;
-  padding:18px;
-  border-radius:16px;
-  margin-top:20px;
-  box-shadow:0 0 10px rgba(0,0,0,0.4);
+  background: linear-gradient(180deg,#1e1b4b,#020617);
+  color:white;
+  font-family: Arial, sans-serif;
+  padding:20px;
 }
 
+/* KARTA */
+.test-box{
+  background: rgba(30,41,59,0.8);
+  backdrop-filter: blur(10px);
+  padding:20px;
+  border-radius:20px;
+  margin-top:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.5);
+}
+
+/* SAVOL */
+.test-box h3{
+  margin-bottom:10px;
+  font-size:22px;
+}
+
+/* TUGMA */
 .test-btn{
   display:block;
   width:100%;
   padding:16px;
-  margin:8px 0;
+  margin:10px 0;
   border:none;
-  border-radius:12px;
+  border-radius:14px;
   font-size:18px;
   font-weight:bold;
-  background:linear-gradient(45deg,#22c55e,#16a34a);
   color:white;
+  cursor:pointer;
+  background: linear-gradient(45deg,#f97316,#7c3aed);
+  transition:0.3s;
 }
 
+.test-btn:hover{
+  transform:scale(1.03);
+  opacity:0.9;
+}
+
+/* NATIJA */
 .result{
   margin-top:10px;
   font-size:18px;
   font-weight:bold;
 }
 
-#natija{
-  font-size:22px;
+/* TO‘G‘RI */
+.true{
   color:#22c55e;
+}
+
+/* NOTO‘G‘RI */
+.false{
+  color:#ef4444;
+}
+
+/* UMUMIY NATIJA */
+#natija{
+  font-size:24px;
   text-align:center;
+  margin-top:20px;
+  color:#22c55e;
 }
 </style>
 </head>
