--- a/web/index.html
+++ b/web/index.html
@@ -36,20 +36,26 @@ body{
 }
 
 .lesson-btn{
-  display:block;
-  width:100%;
-  padding:18px;
-  margin:14px 0;
-  border:none;
-  border-radius:22px;
-  font-size:20px;
-  font-weight:bold;
-  color:white;
-  text-decoration:none;
-  text-align:center;
-  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
-  box-shadow:0 8px 30px rgba(0,0,0,0.5);
-  transition:0.3s;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    gap:12px;
+
+    width:100%;
+    padding:18px;
+    margin:14px 0;
+    border:none;
+    border-radius:22px;
+
+    font-size:20px;
+    font-weight:bold;
+    color:white;
+    text-decoration:none;
+
+    background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
+    box-shadow:0 8px 30px rgba(0,0,0,0.5);
+
+    transition:0.3s;
 }
 
 .green{
