--- a/web/index.html
+++ b/web/index.html
@@ -7,24 +7,30 @@
 
 <style>
 body{
-  height:100vh;
   margin:0;
   font-family:Arial;
-  background: radial-gradient(circle at top,#5b21b6,#020617);
+  background: radial-gradient(circle at top,#6d28d9,#020617);
+
   display:flex;
   justify-content:center;
   align-items:center;
+
+  min-height:100vh;
   color:white;
 }
 
 .wrapper{
-  padding:25px;
+  width:95%;
   max-width:420px;
-  margin:auto;
-  background:rgba(20,20,40,0.6);
+  background:rgba(30,30,60,0.6);
   border-radius:30px;
+  padding:25px;
   box-shadow:0 20px 60px rgba(0,0,0,0.6);
   backdrop-filter:blur(20px);
+  text-align:center;
+
+  margin:auto;          /* SHU MUHIM */
+  box-sizing:border-box;/* SHU HAM MUHIM */
 }
 
 .title{
@@ -36,26 +42,27 @@ body{
 }
 
 .lesson-btn{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:12px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:12px;
 
-    width:100%;
-    padding:18px;
-    margin:14px 0;
-    border:none;
-    border-radius:22px;
+  width:100%;
+  padding:18px;
+  margin:14px 0;
+  border:none;
+  border-radius:22px;
 
-    font-size:20px;
-    font-weight:bold;
-    color:white;
-    text-decoration:none;
+  font-size:20px;
+  font-weight:bold;
+  color:white;
+  text-decoration:none;
 
-    background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
-    box-shadow:0 8px 30px rgba(0,0,0,0.5);
+  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
+  box-shadow:0 8px 30px rgba(0,0,0,0.5);
+  transition:0.3s;
 
-    transition:0.3s;
+  box-sizing:border-box;   /* ENG MUHIM */
 }
 
 .green{
