--- a/web/test.html
+++ b/web/test.html
@@ -6,49 +6,107 @@
 <title>Testlar</title>
 
 <style>
-body{
-  background:#0f172a;
-  color:white;
-  font-family:Arial;
-  text-align:center;
-  padding:20px;
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:Arial, sans-serif;
 }
 
-.btn{
-  display:block;
-  background:linear-gradient(45deg,#3b82f6,#2563eb);
-  padding:14px;
-  border-radius:12px;
+body{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:radial-gradient(circle at top,#6d28d9,#020617);
   color:white;
+}
+
+/* CARD */
+.wrapper{
+  width:95%;
+  max-width:420px;
+  background:rgba(30,30,60,0.6);
+  border-radius:30px;
+  padding:25px;
+  box-shadow:0 20px 60px rgba(0,0,0,0.6);
+  backdrop-filter:blur(20px);
+  text-align:center;
+}
+
+/* Sarlavha */
+.title{
+  font-size:30px;
+  font-weight:bold;
+  margin-bottom:20px;
+  text-shadow:0 5px 20px rgba(0,0,0,0.5);
+}
+
+/* Tugmalar */
+.test-btn{
+  display:block;
+  width:100%;
+  padding:18px;
+  margin:12px 0;
+  border-radius:22px;
   text-decoration:none;
-  margin:10px 0;
-  font-size:16px;
+  font-size:20px;
+  font-weight:bold;
+  color:white;
+  transition:0.3s;
+  box-shadow:0 8px 25px rgba(0,0,0,0.5);
+}
+
+.test-btn:hover{
+  transform:scale(1.05);
+  opacity:0.9;
+}
+
+/* Ranglar */
+.gradient{
+  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
 }
 
 .back{
-  background:#ef4444;
+  background:linear-gradient(90deg,#ef4444,#dc2626);
 }
 </style>
 </head>
 
 <body>
 
-<h1>📝 Testlar</h1>
+<div class="wrapper">
 
-<a class="btn" href="#">1-Mavzu Test</a>
-<a class="btn" href="#">2-Mavzu Test</a>
-<a class="btn" href="#">3-Mavzu Test</a>
-<a class="btn" href="#">4-Mavzu Test</a>
-<a class="btn" href="#">5-Mavzu Test</a>
-<a class="btn" href="#">6-Mavzu Test</a>
-<a class="btn" href="#">7-Mavzu Test</a>
-<a class="btn" href="#">8-Mavzu Test</a>
-<a class="btn" href="#">9-Mavzu Test</a>
-<a class="btn" href="#">10-Mavzu Test</a>
+<h1 class="title">📝 Testlar</h1>
 
-<br>
+<a href="test1.html" class="test-btn gradient">1-Mavzu Test</a>
+<a href="test2.html" class="test-btn gradient">2-Mavzu Test</a>
+<a href="test3.html" class="test-btn gradient">3-Mavzu Test</a>
+<a href="test4.html" class="test-btn gradient">4-Mavzu Test</a>
+<a href="test5.html" class="test-btn gradient">5-Mavzu Test</a>
+<a href="test6.html" class="test-btn gradient">6-Mavzu Test</a>
+<a href="test7.html" class="test-btn gradient">7-Mavzu Test</a>
+<a href="test8.html" class="test-btn gradient">8-Mavzu Test</a>
+<a href="test9.html" class="test-btn gradient">9-Mavzu Test</a>
+<a href="test10.html" class="test-btn gradient">10-Mavzu Test</a>
+<a href="test11.html" class="test-btn gradient">11-Mavzu Test</a>
+<a href="test12.html" class="test-btn gradient">12-Mavzu Test</a>
+<a href="test13.html" class="test-btn gradient">13-Mavzu Test</a>
+<a href="test14.html" class="test-btn gradient">14-Mavzu Test</a>
+<a href="test15.html" class="test-btn gradient">15-Mavzu Test</a>
+<a href="test16.html" class="test-btn gradient">16-Mavzu Test</a>
+<a href="test17.html" class="test-btn gradient">17-Mavzu Test</a>
+<a href="test18.html" class="test-btn gradient">18-Mavzu Test</a>
+<a href="test19.html" class="test-btn gradient">19-Mavzu Test</a>
+<a href="test20.html" class="test-btn gradient">20-Mavzu Test</a>
+<a href="test21.html" class="test-btn gradient">21-Mavzu Test</a>
+<a href="test22.html" class="test-btn gradient">22-Mavzu Test</a>
+<a href="test23.html" class="test-btn gradient">23-Mavzu Test</a>
+<a href="test24.html" class="test-btn gradient">24-Mavzu Test</a>
+<a href="test25.html" class="test-btn gradient">25-Mavzu Test</a>
 
-<a class="btn back" href="index.html">⬅ Orqaga</a>
+<a href="index.html" class="test-btn back">⬅ Orqaga</a>
 
+</div>
 </body>
 </html>
